mavensmate/Project Project/src/objects/Project_Module__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Bracing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Bracing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Plan_Sets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Plan Sets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ceiling_Height__c</fullName>
        <label>Ceiling Height</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Column_Color__c</fullName>
        <label>Column Color</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compression_Beam_Height__c</fullName>
        <label>Compression Beam Height</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Concrete_Slab_Thickness__c</fullName>
        <label>Concrete Slab Thickness</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Location__c</fullName>
        <label>Course Location</label>
        <picklist>
            <picklistValues>
                <fullName>Indoors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outdoors</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Course_Model__c</fullName>
        <label>Course Model</label>
        <picklist>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Explorer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navigator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sky Tykes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voyager</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Days_On_Site__c</fullName>
        <label>Days On Site</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deluxe_Track_Stops__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deluxe Track Stops</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engineering_Complete_Date__c</fullName>
        <label>Engineering Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engineering_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engineering Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entrance_Barrier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entrance Barrier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entrance_Clearances__c</fullName>
        <label>Entrance Clearances</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fabrication_Complete_Date__c</fullName>
        <label>Fabrication Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fabrication_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fabrication Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Platform_Height__c</fullName>
        <label>Final Platform Height</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finished_Floor_Material__c</fullName>
        <label>Finished Floor Material</label>
        <picklist>
            <picklistValues>
                <fullName>Carpet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tile</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Galvanized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Galvanized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Harness_Type__c</fullName>
        <label>Harness Type</label>
        <picklist>
            <picklistValues>
                <fullName>French Creek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Petzl Aspir Seat Harness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Petzl Voltige Chest Harness</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Increased_Height__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Increased Height</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Installation_Budget__c</fullName>
        <label>Installation Budget</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Installation_End_Date__c</fullName>
        <label>Installation End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installation_Notes__c</fullName>
        <label>Installation Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Installation_Start_Date__c</fullName>
        <label>Installation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installed_By__c</fullName>
        <label>Installed By</label>
        <picklist>
            <picklistValues>
                <fullName>RCI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Number__c</fullName>
        <label>Job Number</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Large__c</fullName>
        <label>Large</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medium__c</fullName>
        <label>Medium</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mezzanine_Entrance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mezzanine Entrance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Module_Cost__c</fullName>
        <label>Expected Cost</label>
        <summarizedField>Project_Module_Detail__c.Cost__c</summarizedField>
        <summaryForeignKey>Project_Module_Detail__c.Project_Module__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Module_Revenue__c</fullName>
        <label>Retail Amount</label>
        <summarizedField>Project_Module_Detail__c.Revenue__c</summarizedField>
        <summaryForeignKey>Project_Module_Detail__c.Project_Module__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Module_Type__c</fullName>
        <label>Module Type</label>
        <picklist>
            <picklistValues>
                <fullName>Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sky Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sky Trail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zip Line</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_One_Way_Inclines__c</fullName>
        <label>Number One-Way Inclines</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Two_Way_Inclines__c</fullName>
        <label>Number Two-Way Inclines</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Days_On_Site__c</fullName>
        <label>Number of Days On Site</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_ETKs__c</fullName>
        <label>Number of ETKs</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Elements__c</fullName>
        <label>Number of Elements</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Inclines__c</fullName>
        <label>Number of Inclines</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Installers__c</fullName>
        <label>Number of Installers</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Levels__c</fullName>
        <label>Number of Levels</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Poles__c</fullName>
        <label>Number of Poles</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Zip_Towers__c</fullName>
        <label>Number of Zip Towers</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Site_Equipment__c</fullName>
        <label>On Site Equipment</label>
        <picklist>
            <picklistValues>
                <fullName>Crane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hi Lo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sky Trak</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Operator_Sling_Lines__c</fullName>
        <label>Operator Sling Lines</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Project Modules</relationshipLabel>
        <relationshipName>Project_Modules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Overhead_Color__c</fullName>
        <label>Overhead Color</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paint_Complete_Date__c</fullName>
        <label>Paint Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Paint_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paint Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Paint_Type__c</fullName>
        <label>Paint Type</label>
        <picklist>
            <picklistValues>
                <fullName>Devthane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parallel_With_Course__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parallel With Course</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Platform_Color__c</fullName>
        <label>Platform Color</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipName>Project_Modules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primer_Type__c</fullName>
        <label>Primer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Zinc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epoxy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Project_Modules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Queueing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Queueing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RFID_Package__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RFID Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sandblasted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sandblasted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Weld_Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Weld Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sky_Rail_Length__c</fullName>
        <label>Sky Rail Length</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Slider_Assembly__c</fullName>
        <label>Slider Assembly</label>
        <picklist>
            <picklistValues>
                <fullName>RSA2</fullName>
                <default>true</default>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sling_Line_Color__c</fullName>
        <label>Sling Line Color</label>
        <picklist>
            <picklistValues>
                <fullName>Brown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sling_Line_Model__c</fullName>
        <label>Sling Line Model</label>
        <picklist>
            <picklistValues>
                <fullName>Adjustable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Dual</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Small__c</fullName>
        <label>Small</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Element_Requests__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special Element Requests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StandAlone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>StandAlone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Stamp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>State Stamp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Steel_Certifications_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Steel Certifications Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Third_Party_NDT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Third Party NDT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training_Certificate_Date__c</fullName>
        <label>Training Certificate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Course_s__c</fullName>
        <label>Training Course(s)</label>
        <picklist>
            <picklistValues>
                <fullName>Sky Trail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sky Tykes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTS Zip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sky Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspection</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training_Date_End__c</fullName>
        <label>Training Date End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Date_Start__c</fullName>
        <label>Training Date Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Participants__c</fullName>
        <label>Training Participants</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Site__c</fullName>
        <label>Training Site</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RCI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trolley_Model__c</fullName>
        <label>Trolley Model</label>
        <picklist>
            <picklistValues>
                <fullName>Aluminum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aluminum &amp; Plastic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sleek Design</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Training__c</fullName>
        <label>Type of Training</label>
        <picklist>
            <picklistValues>
                <fullName>Operator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Train The Trainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTS Zip Operator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspector</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Walk_the_Plank_Elements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Walk the Plank Elements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wire_Rope_Diamater__c</fullName>
        <label>Wire Rope Diamater</label>
        <picklist>
            <picklistValues>
                <fullName>3/8&quot;</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X_Small_Quantity__c</fullName>
        <label>X-Small</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip_Line_Distance_s__c</fullName>
        <label>Zip Line Length(s)</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Line_Tower_Height_s__c</fullName>
        <label>Zip Line Tower Height(s)</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <label>Project Type</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Module Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>